RESOLVED FIXED71261
PluginProxy shouldn't use window-relative coordinates
https://bugs.webkit.org/show_bug.cgi?id=71261
Summary PluginProxy shouldn't use window-relative coordinates
Anders Carlsson
Reported 2011-10-31 18:08:09 PDT
PluginProxy shouldn't use window-relative coordinates
Attachments
Patch (4.22 KB, patch)
2011-10-31 18:10 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2011-10-31 18:10:30 PDT
Adam Roben (:aroben)
Comment 2 2011-11-01 09:41:49 PDT
Comment on attachment 113118 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=113118&action=review > Source/WebKit2/WebProcess/Plugins/PluginProxy.cpp:151 > - IntRect dirtyRectInPluginCoordinates = dirtyRect; > - dirtyRectInPluginCoordinates.move(-m_frameRectInWindowCoordinates.x(), -m_frameRectInWindowCoordinates.y()); > - > - m_backingStore->paint(*graphicsContext, contentsScaleFactor(), dirtyRect.location(), dirtyRectInPluginCoordinates); > + m_backingStore->paint(*graphicsContext, contentsScaleFactor(), dirtyRect.location(), dirtyRect); If I were just to read this code change on its own, I would think that you are now passing a dirtyRect in window coordinates to paint(), since you are no longer converting to plugin coordinates. Perhaps the ChangeLog should explain that dirtyRect is now already in plugin coordinates so no conversion is necessary.
Anders Carlsson
Comment 3 2011-11-01 09:51:22 PDT
Note You need to log in before you can comment on or make changes to this bug.