PluginProxy shouldn't use window-relative coordinates https://bugs.webkit.org/show_bug.cgi?id=71261

Reviewed by Adam Roben.

Change PluginProxy::wantsWindowRelativeCoordinates to return false and remove
m_frameRectInWindowCoordinates and m_clipRectInWindowCoordinates. This is yet another step
towards eliminating window-relative coordinates wherever possible.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::paint):
Since the dirty rect passed to paint is now in plug-in coordinates, there's no need to convert it
from window coordinates to plug-in coordinates before passing it to BackingStore::paint.

(WebKit::PluginProxy::deprecatedGeometryDidChange):
Assert that we're not calling this anymore.

(WebKit::PluginProxy::wantsWindowRelativeCoordinates):
Return false.

Canonical link: https://commits.webkit.org/87577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98972 268f45cc-cd09-0410-ab3c-d52691b4dbfc